[gd_scene load_steps=32 format=3 uid="uid://8ughnu5tewm8"]

[ext_resource type="Script" path="res://entity/ika-ship/ikaruga.gd" id="1_daaj3"]
[ext_resource type="PackedScene" uid="uid://bhsqtqwuv8o8i" path="res://entity/projectile/moon_slice.tscn" id="2_wqn08"]
[ext_resource type="Texture2D" uid="uid://pwang074ndqg" path="res://sprite/ui/Button13.png" id="3_anwfs"]
[ext_resource type="FontFile" uid="uid://dvtfa5uxwot3n" path="res://sprite/ui/monogram.ttf" id="3_w86ci"]
[ext_resource type="Texture2D" uid="uid://b4jrdpckq6fva" path="res://sprite/ships/rai2.png" id="3_yd32l"]
[ext_resource type="Script" path="res://levels/ui/heat_bar.gd" id="4_10dm8"]
[ext_resource type="Shader" path="res://entity/ika-ship/bullet_eatr.gdshader" id="7_dp7h1"]
[ext_resource type="AudioStream" uid="uid://bttf3emm8dprt" path="res://audio/poly/Laser_Shoot22.wav" id="8_aj7v8"]
[ext_resource type="Texture2D" uid="uid://ilopag6muatl" path="res://sprite/fx/polaura.png" id="8_cgvjf"]
[ext_resource type="PackedScene" uid="uid://dd50gs7cve3bo" path="res://levels/effects/Binker.tscn" id="9_0mgsf"]
[ext_resource type="Script" path="res://audio/pitch_randomizer.gd" id="9_v1lqx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rm3hk"]
bg_color = Color(0.0588235, 0.0392157, 0.415686, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.2, 0.486275, 0.94902, 1)
border_blend = true
corner_radius_top_left = 4
corner_radius_bottom_right = 4
expand_margin_left = 3.0
expand_margin_top = 3.0
expand_margin_right = 3.0
expand_margin_bottom = 3.0
anti_aliasing_size = 1.157

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jt1s6"]
texture = ExtResource("3_anwfs")
region_rect = Rect2(0, 0, 105, 21)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_7eqr3"]
load_path = "res://.godot/imported/myraidit.png-865f0d99ded09fd7af59cb128d1e99ec.bptc.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_x0t60"]
atlas = SubResource("CompressedTexture2D_7eqr3")
region = Rect2(0, 0, 135, 156)

[sub_resource type="AtlasTexture" id="AtlasTexture_f51ry"]
atlas = SubResource("CompressedTexture2D_7eqr3")
region = Rect2(135, 0, 135, 156)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8hu4"]
atlas = SubResource("CompressedTexture2D_7eqr3")
region = Rect2(270, 0, 135, 156)

[sub_resource type="AtlasTexture" id="AtlasTexture_pnurn"]
atlas = SubResource("CompressedTexture2D_7eqr3")
region = Rect2(405, 0, 135, 156)

[sub_resource type="AtlasTexture" id="AtlasTexture_1prke"]
atlas = SubResource("CompressedTexture2D_7eqr3")
region = Rect2(540, 0, 135, 156)

[sub_resource type="AtlasTexture" id="AtlasTexture_mn0hr"]
atlas = SubResource("CompressedTexture2D_7eqr3")
region = Rect2(675, 0, 135, 156)

[sub_resource type="AtlasTexture" id="AtlasTexture_iaqm4"]
atlas = ExtResource("3_yd32l")
region = Rect2(0, 0, 135, 156)

[sub_resource type="AtlasTexture" id="AtlasTexture_tptsa"]
atlas = ExtResource("3_yd32l")
region = Rect2(135, 0, 135, 156)

[sub_resource type="AtlasTexture" id="AtlasTexture_rv30t"]
atlas = ExtResource("3_yd32l")
region = Rect2(270, 0, 135, 156)

[sub_resource type="AtlasTexture" id="AtlasTexture_ftkro"]
atlas = ExtResource("3_yd32l")
region = Rect2(405, 0, 135, 156)

[sub_resource type="AtlasTexture" id="AtlasTexture_ll3yy"]
atlas = ExtResource("3_yd32l")
region = Rect2(540, 0, 135, 156)

[sub_resource type="AtlasTexture" id="AtlasTexture_is70c"]
atlas = ExtResource("3_yd32l")
region = Rect2(675, 0, 135, 156)

[sub_resource type="SpriteFrames" id="SpriteFrames_guuko"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x0t60")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f51ry")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8hu4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pnurn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1prke")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mn0hr")
}],
"loop": false,
"name": &"new_tilt",
"speed": 24.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iaqm4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tptsa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rv30t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ftkro")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ll3yy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_is70c")
}],
"loop": false,
"name": &"tilt",
"speed": 24.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_427sm"]
radius = 37.5309

[sub_resource type="CircleShape2D" id="CircleShape2D_drp1w"]
radius = 1905.08

[sub_resource type="ShaderMaterial" id="ShaderMaterial_w4vuc"]
shader = ExtResource("7_dp7h1")

[sub_resource type="CircleShape2D" id="CircleShape2D_237g1"]
radius = 10.1351

[node name="Ikaruga" type="CharacterBody2D"]
scale = Vector2(0.5, 0.5)
collision_mask = 16
script = ExtResource("1_daaj3")
speed = 460
shot_limit = 5
heat_limit = 666
Bullet = ExtResource("2_wqn08")
multiplier = 0.04

[node name="HeatBar" type="ProgressBar" parent="."]
z_index = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = 96.0
offset_right = 48.0
offset_bottom = 123.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_w86ci")
theme_override_font_sizes/font_size = 64
theme_override_styles/background = SubResource("StyleBoxFlat_rm3hk")
theme_override_styles/fill = SubResource("StyleBoxTexture_jt1s6")
max_value = 555.0
step = 11.0
value = 264.0
show_percentage = false
script = ExtResource("4_10dm8")

[node name="SpriteT" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -14.2857)
sprite_frames = SubResource("SpriteFrames_guuko")
animation = &"new_tilt"

[node name="collisionshape" type="CollisionShape2D" parent="."]
scale = Vector2(1.42105, 1.42105)
shape = SubResource("CircleShape2D_427sm")

[node name="Gun0" type="Marker2D" parent="."]
position = Vector2(-2.42532e-11, -91.6667)
rotation = -1.57079

[node name="Gun1" type="Marker2D" parent="."]
position = Vector2(51.6667, -5)
rotation = -1.57079

[node name="Gun2" type="Marker2D" parent="."]
position = Vector2(-51.6667, -5)
rotation = -1.57079

[node name="LGun" type="Marker2D" parent="."]
position = Vector2(-23.3333, -43.3333)
rotation = -1.57079

[node name="RGun" type="Marker2D" parent="."]
position = Vector2(25, -43.3333)
rotation = -1.57079

[node name="FireCooldown" type="Timer" parent="."]
wait_time = 0.065
one_shot = true

[node name="VentDelay" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="InvTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 1.8
one_shot = true
autostart = true

[node name="BulletEatr" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="BulletEatr"]
shape = SubResource("CircleShape2D_drp1w")

[node name="Sprite2D" type="Sprite2D" parent="BulletEatr"]
material = SubResource("ShaderMaterial_w4vuc")
scale = Vector2(2.64063, 2.64063)
texture = ExtResource("8_cgvjf")

[node name="NexusCore" type="Area2D" parent="."]
collision_mask = 34
monitorable = false

[node name="killbox" type="CollisionShape2D" parent="NexusCore"]
scale = Vector2(1.48, 1.48)
shape = SubResource("CircleShape2D_237g1")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
visible = false

[node name="FiringSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_aj7v8")
max_distance = 9999.0
max_polyphony = 8
script = ExtResource("9_v1lqx")

[node name="Binker" parent="." instance=ExtResource("9_0mgsf")]

[connection signal="timeout" from="FireCooldown" to="." method="_on_fire_cooldown_timeout"]
[connection signal="timeout" from="VentDelay" to="." method="_on_vent_delay_timeout"]
[connection signal="timeout" from="InvTimer" to="." method="_on_inv_timer_timeout"]
[connection signal="area_entered" from="BulletEatr" to="." method="_on_bullet_eatr_area_entered"]
[connection signal="area_entered" from="NexusCore" to="." method="_on_nexus_core_area_entered"]
[connection signal="body_entered" from="NexusCore" to="." method="_on_nexus_core_body_entered"]
